--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div><ol>
+		<blockquote class="questions"><p>Who was the first female to become the governor of an Indian state?</p></blockquote>
+	    <blockquote class="questions"><p>Who among first Woman to climb Mount Everest twice?</p></blockquote>
+	    <blockquote class="questions"><p>Who is President of India?</p></blockquote>
+		</ol>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
