--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div><ol>
-		<blockquote class="questions"><p>Who was the first female to become the governor of an Indian state?</p></blockquote>
-	    <blockquote class="questions"><p>Who among first Woman to climb Mount Everest twice?</p></blockquote>
-	    <blockquote class="questions"><p>Who is President of India?</p></blockquote>
+		<blockquote class="questions"><p><li>Who was the first female to become the governor of an Indian state?</li></p></blockquote>
+	    <blockquote class="questions"><p><li>Who among first Woman to climb Mount Everest twice?</li></p></blockquote>
+	    <blockquote class="questions"><p><li>Who is President of India?</li></p></blockquote>
 		</ol>
 	</div>
     <script type="text/javascript" src="./script.js">
