--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<form action="form">
+		<form action="">
 		<ol>
 		<blockquote class="questions"><p><li>Who was the first female to become the governor of an Indian state?</li></p></blockquote>
 		<blockquote class="questions"><p><li>Who among first Woman to climb Mount Everest twice?</li></p></blockquote>
